Add UI for loading module (dummy data)

--- a/engine-core/src/main/resources/i18n/jukebox_en.properties
+++ b/engine-core/src/main/resources/i18n/jukebox_en.properties
@@ -19,3 +19,4 @@ exception.save.ioerror=IO Error while saving file!
 exception.save.unknownerror=Unknown Error while saving file!
 about.modal.title=About
 about.modal.header=About this software
+menu.modules=Modules
