--- a/engine-core/src/main/resources/i18n/jukebox_fr.properties
+++ b/engine-core/src/main/resources/i18n/jukebox_fr.properties
@@ -19,3 +19,4 @@ exception.save.ioerror = IO Erreur lors de l'enregistrement du fichier!
 exception.save.unknownerror = Erreur inconnue lors de l'enregistrement du fichier!
 about.modal.title = A propos de
 about.modal.header = À propos de ce logiciel
+menu.modules=menu.modules
